ul added to html and first code in js

--- a/index.html
+++ b/index.html
@@ -11,5 +11,10 @@
     <p>nima gaplar?</p>
     <input type="text">
     <button>click</button>
+    <ul>
+        <li>hellow</li>
+        <li>hellow</li>
+        <li>hellow</li>
+    </ul>
 </body>
 </html>
