select added to html

--- a/index.html
+++ b/index.html
@@ -16,5 +16,13 @@
         <li>hellow</li>
         <li>hellow</li>
     </ul>
+    <select name="" id="">
+        <option value="">
+            hellow
+        </option>
+        <option value="">
+            hellow
+        </option>
+    </select>
 </body>
 </html>
