--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>hellog</h1>
-    <p>nima gaplar?</p>
+    <p id="p">nima gaplar?</p>
     <input type="text">
     <button>click</button>
     <ul>
